# sfsim

./: .gitignore  CMakeLists.txt  CMakePresets.json  GETTING_STARTED.md  README.md  REFACTORING_ROADMAP.md  vcpkg.json
include/: camera.hpp  drawable.hpp  examples.hpp  line3d.hpp  mesh.hpp  obj.hpp  point3d.hpp  sim.hpp  transform.hpp  triangle.hpp  triangle.hpp.new
include/core/: input.hpp  time.hpp
include/ecs/: component.hpp  entity.hpp  render_component.hpp  system.hpp  transform_component.hpp
include/geometry/: geometry.hpp  line.hpp  mesh.hpp  point.hpp  triangle.hpp
include/math/: matrix.hpp  vector.hpp  vector3f.hpp
include/physics/: physics.hpp
include/renderer/: material.hpp  renderer.hpp
include/scene/: scene.hpp
include/simobj/: entity.hpp
src/: camera.cpp  examples.cpp  main.cpp  matmul.cu  sim.cpp  simple_examples.cpp  transform.cpp
src/core/: input.cpp  time.cpp
src/ecs/: entity.cpp  render_component.cpp  transform_component.cpp
src/geometry/: line.cpp  mesh.cpp  point.cpp  triangle.cpp
src/physics/: physics.cpp
src/renderer/: material.cpp  renderer.cpp
src/scene/: scene.cpp
src/simobj/: entity.cpp
src/tests/: math_test.cpp
